src/objects/Int_Party_External_Reference__c.object
<CustomObject>
    <description>Int Party External Reference</description>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Identifier_Type__c</fullName>
        <description>External Identifier Type</description>
        <label>External Identifier Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Identifier__c</fullName>
        <description>External Identifier</description>
        <label>External Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Party Name</description>
        <label>Party Name</label>
        <referenceTo>Int_Party__c</referenceTo>
        <relationshipLabel>Int Party External References</relationshipLabel>
        <relationshipName>Int_Party_External_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_Number__c</fullName>
        <description>Party Number</description>
        <label>Party Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Party_Source_System__c</fullName>
        <description>Party Source System</description>
        <label>Party Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Int Party External Reference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Party_Name__c</columns>
        <columns>External_Identifier_Type__c</columns>
        <columns>External_Identifier__c</columns>
        <columns>Party_Number__c</columns>
        <columns>Party_Source_System__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PER-{0000000000}</displayFormat>
        <label>Party External Reference Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Party External References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>